<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ync.ch05_payment.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paymentType"
        android:layout_marginTop="196dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

        <RadioButton
            android:id="@+id/paymentCOD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="show"
            android:text="@string/paymentCOD"
            android:textSize="@dimen/btnRadio" />

        <RadioButton
            android:id="@+id/paymentCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:onClick="show"
            android:text="@string/paymentCredit"
            android:textSize="@dimen/btnRadio" />

        <RadioButton
            android:id="@+id/paymentPalPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:onClick="show"
            android:text="@string/paymentPalPay"
            android:textSize="@dimen/btnRadio" />

    </RadioGroup>

    <Button
        android:id="@+id/paymentConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paymentCheck"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/paymentHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paymentHint"
        android:textSize="@dimen/btnRadio"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/paymentType"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/quantityHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/paymentHint"
        android:textSize="@dimen/btnRadio"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/quantityType"
        tools:layout_constraintLeft_creator="1" />

    <RadioGroup
        android:id="@+id/quantityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

        <RadioButton
            android:id="@+id/quantity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="show"
            android:text="@string/quantity1"
            android:textSize="@dimen/btnRadio" />

        <RadioButton
            android:id="@+id/quantity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:onClick="show"
            android:text="@string/quantity2"
            android:textSize="@dimen/btnRadio" />

        <RadioButton
            android:id="@+id/quantity3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:onClick="show"
            android:text="@string/quantity3"
            android:textSize="@dimen/btnRadio" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
